Fixed content height cutoff bug.

--- a/nom-nom-ui/src/styles/app.css
+++ b/nom-nom-ui/src/styles/app.css
@@ -31,15 +31,10 @@ select {
 
 html,
 body {
-  height: 100%;
   min-width: 440px;
   margin: 0px;
   padding: 0px;
   color: var(--dark-grey);
-}
-
-body > #root {
-  height: 100%;
 }
 
 body:before,
@@ -68,6 +63,7 @@ body:after {
 main {
   display: flex;
   height: 100%;
+  min-height: 100vh;
   flex-flow: column nowrap;
 }
 
@@ -117,6 +113,7 @@ main > section {
   width: calc(100% - 80px);
   height: 100%;
   margin: 40px auto;
+  flex: 1 1 auto;
   flex-flow: column nowrap;
 }
 
